[metadata]
name = asyncio-ogn-client
version = 0.1.0
author = Colin Sindle
author_email = ogn@succinct.co.za
description = Asynchronous APRS OGN (Open Glider Network) Client for asyncio and Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/csindle/async-ogn-client
project_urls =
    Bug Tracker = https://github.com/csindle/async-ogn-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
