[metadata]
name = aogn
version = 0.1.3
author = Colin Sindle
author_email = aogn@succinct.co.za
description = Asynchronous APRS OGN (Open Glider Network) Client for asyncio and Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/csindle/aogn
project_urls =
    Bug Tracker = https://github.com/csindle/aogn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
